--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -61,7 +61,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-black text-white;
     @apply font-extralight;
   }
 }
